--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "illuminate/http": "^7.14.1|^8.0|^9.0",
         "illuminate/console": "^7.14.1|^8.0|^9.0",
         "illuminate/support": "^7.14.1|^8.0|^9.0",
-        "chartisan/php": "^1.2.0"
+        "chartisan/php": "dev-master"
     },
     "authors": [
         {
@@ -28,5 +28,11 @@
                 "ConsoleTVs\\Charts\\ChartsServiceProvider"
             ]
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/prof-anis/chartisanphp"
+        }
+    ]
 }
